--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 </div>
                 <div class="col-12 col-md-6">
                     <div class="timeline-text-wrapper">
-                        <h4 class="mbr-timeline-title mbr-fonts-style mb-0 display-5">Specialist aviation<strong> translators </strong>in <strong>Cham Wings, Damascus</strong></h4>
+                        <h4 class="mbr-timeline-title mbr-fonts-style mb-0 display-5">Specialist aviation<strong> translator </strong>in <strong>Cham Wings, Damascus</strong></h4>
                         <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7">I had to comprehend the terminology in both English and Arabic as an expert aviation translator to provide a correct translation. Because of this, Cham Wings was able to deliver information that is easy to understand and transparent, guaranteeing that the equipment is utilized properly for safer flights.</p>
                     </div>
                 </div>
