--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@
                     <div class="plan-header">
                         <h6 class="plan-title mbr-fonts-style mb-3 display-5"><strong>English to Arabic</strong></h6>
                         <div class="plan-price">
-                            <p class="price mbr-fonts-style m-0 display-2"><strong>$0.03</strong></p>
-                            <p class="price-term mbr-fonts-style mb-3 display-7"><strong>Per word</strong></p>
+                            <p class="price mbr-fonts-style m-0 display-2"><strong>0.2 AED per word</strong></p>
+                            <p class="price-term mbr-fonts-style mb-3 display-7"><strong>Or 50 AED per (page | 250 words)</strong></p>
                         </div>
                     </div>
                     <div class="plan-body">
@@ -227,8 +227,8 @@
                     <div class="plan-header">
                         <h6 class="plan-title mbr-fonts-style mb-3 display-5"><strong>Arabic to English</strong></h6>
                         <div class="plan-price">
-                            <p class="price mbr-fonts-style m-0 display-2"><strong>$0.02</strong></p>
-                            <p class="price-term mbr-fonts-style mb-3 display-7"><strong>Per word</strong></p>
+                            <p class="price mbr-fonts-style m-0 display-2"><strong>0.3 AED per word</strong></p>
+                            <p class="price-term mbr-fonts-style mb-3 display-7"><strong>Or 75 AED per (page | 250 words)</strong></p>
                         </div>
                     </div>
                     <div class="plan-body">
@@ -246,8 +246,8 @@
                     <div class="plan-header">
                         <h6 class="plan-title mbr-fonts-style mb-3 display-5"><strong>Proofreading</strong></h6>
                         <div class="plan-price">
-                            <p class="price mbr-fonts-style m-0 display-2"><strong>$0.01</strong></p>
-                            <p class="price-term mbr-fonts-style mb-3 display-7"><strong>Per word</strong></p>
+                            <p class="price mbr-fonts-style m-0 display-2"><strong>0.1 AED per word</strong></p>
+                            <p class="price-term mbr-fonts-style mb-3 display-7"><strong> Or 25 AED per (page | 250 words) </strong></p>
                         </div>
                     </div>
                     <div class="plan-body">
